# backend/src/modules/invoices/invoices.controller.ts
@@ -1,0 +1,56 @@
+
+import {
+  Controller,
+  Get,
+  Post,
+  Body,
+  Patch,
+  Param,
+  Delete,
+  UseGuards,
+  ParseIntPipe,
+  HttpCode,
+  HttpStatus,
+} from '@nestjs/common';
+import { InvoicesService } from './invoices.service';
+import { CreateInvoiceDto } from './dto/create-invoice.dto';
+import { UpdateInvoiceDto } from './dto/update-invoice.dto';
+import { JwtAuthGuard } from '../auth/jwt.guard';
+import { GetUser } from '../auth/get-user.decorator';
+import { User } from '../users/users.service';
+
+@UseGuards(JwtAuthGuard)
+@Controller('invoices')
+export class InvoicesController {
+  constructor(private readonly invoicesService: InvoicesService) {}
+
+  @Post()
+  create(@Body() createInvoiceDto: CreateInvoiceDto, @GetUser() user: User) {
+    return this.invoicesService.create(createInvoiceDto, user.organizationId);
+  }
+
+  @Get()
+  findAll(@GetUser() user: User) {
+    return this.invoicesService.findAll(user.organizationId);
+  }
+
+  @Get(':id')
+  findOne(@Param('id', ParseIntPipe) id: number, @GetUser() user: User) {
+    return this.invoicesService.findOne(id, user.organizationId);
+  }
+
+  @Patch(':id')
+  update(
+    @Param('id', ParseIntPipe) id: number,
+    @Body() updateInvoiceDto: UpdateInvoiceDto,
+    @GetUser() user: User,
+  ) {
+    return this.invoicesService.update(id, updateInvoiceDto, user.organizationId);
+  }
+
+  @Delete(':id')
+  @HttpCode(HttpStatus.NO_CONTENT)
+  remove(@Param('id', ParseIntPipe) id: number, @GetUser() user: User) {
+    return this.invoicesService.remove(id, user.organizationId);
+  }
+}
